Added option to read local files generated with yambopy

--- a/css/style.css
+++ b/css/style.css
@@ -135,5 +135,28 @@ canvas {
 #highcharts {
     height: 100%;
     width: 100%;
-	  position: absolute;
+    position: absolute;
 }
+
+
+pre {
+    background-color: #edf0f2;
+    padding: 12px;
+}
+
+/* 
+pandoc colors from:
+https://github.com/jeffbr13/benjeffrey.com/blob/master/posts/pandoc-syntax-highlighting-css.md
+*/
+code .kw { color: #268BD2; }
+code .dt { color: #268BD2; }
+
+//code .dv, code .bn, .sourceCodecolor: #D33682; }
+code .ch { color: #DC322F; }
+code .st { color: #2AA198; }
+code .co { color: #93A1A1; }
+code .ot { color: #A57800; }
+code .al { color: #CB4B16; font-weight: bold; }
+code .fu { color: #268BD2; }
+code .re { }
+code .er { color: #D30102; font-weight: bold; }
